# pylonparser

./: .gitignore  .pre-commit-config.yaml  README.md  example_usage.py  pyproject.toml
.github/workflows/: build-test.yaml  publish-release.yml  publish.yml  python-package.yml  release.yml
pylonparser/: game.py  matches.py  parser.py  schedules.py  scraper.py
tests/: parser_test.py  test_matches.py  test_schedules.py  test_scraper.py
